# work-reporter

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  playwright_test.js  pyproject.toml  startup.bat
src/: __init__.py  config_loader.py  event_store.py  privacy_filter.py  report_generator.py  scheduler.py  screenshot.py  tray_app.py  vision_analyzer.py  vlm_queue.py  web_dashboard.py  work_memory.py
