[project]
name = "work-reporter"
version = "0.1.0"
description = "Auto daily/weekly work report generator with screenshot capture and privacy filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "APScheduler>=3.10.0",
    "pystray>=0.19.0",
    "imagehash>=4.3.0",
    "pytesseract>=0.3.0",
    "pygetwindow>=0.0.9",
    "PyYAML>=6.0",
    "pywin32>=306; sys_platform == 'win32'",
    "opencv-python-headless>=4.8.0",
    "pynput>=1.7.0",
    "requests>=2.31.0",
]
